tests/negative/regression/r38.orng
// r38.orng:6:10: error: no default value for type `()->()`
//     const a: @typeof( fn () -> () { } )
//         ^
// 
fn main() -> Int { 
    const a: @typeof( fn () -> () { } )
} 
